# arm64-asr

./: .gitignore  README.md  app.py  example.env  pyproject.toml
src/: app.py  config.py  main.py  state.py  summarizer.py  transcriber.py
src/services/: pipeline.py
src/ui/: record.py  upload.py
src/utils/: audio.py  progress.py
