[project]
name = "arm64-asr"
version = "0.1.0"
description = "ASR for AArch64 with CUDA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ctranslate2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.32",
    "langchain-text-splitters>=0.3.9",
    "numpy==1.26.4",
    "openai>=1.101.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.0",
    "streamlit-mic-recorder>=0.0.8",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "whisperx>=3.3.1",
]

[tool.uv.sources]
ctranslate2 = { path = "packages/ctranslate2-4.4.0-cp310-cp310-linux_aarch64.whl" }

[[tool.uv.index]]
url = "https://pypi.jetson-ai-lab.io/jp6/cu126"
default = true
